<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".AddTaskActivity">

    <TextView
        android:id="@+id/addTaskHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="16dp"
        android:textColor="@color/purple"
        android:textSize="24sp"
        android:textStyle="bold"
        android:fontFamily="@font/poppins"
        android:text="@string/add_task"/>

    <ImageView
        android:id="@+id/saveButton"
        android:layout_width="36dp"
        android:layout_height="39dp"
        android:layout_alignTop="@+id/addTaskHeading"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="6dp"
        android:src="@drawable/baseline_add_task_24"
        app:tint="@color/purple" />

    <EditText
        android:id="@+id/titleEditText"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/title_hint"
        android:padding="12dp"
        android:textSize="20sp"
        android:layout_below="@+id/saveButton"
        android:background="@drawable/box_border"
        android:layout_marginTop="16dp"
        android:maxLines="1"
        android:fontFamily="@font/poppins"/>

    <Spinner
        android:id="@+id/prioritySpinner"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/titleEditText"
        android:layout_marginTop="16dp"
        android:background="@drawable/box_border"
        android:padding="12dp"
        android:textSize="20sp"
        android:entries="@array/priority_array"
        android:fontFamily="@font/poppins"/>

    <TextView
        android:id="@+id/deadLineTextView"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/deadLine_hint"
        android:padding="12dp"
        android:textSize="20sp"
        android:layout_below="@+id/prioritySpinner"
        android:background="@drawable/box_border"
        android:layout_marginTop="16dp"
        android:maxLines="1"
        android:fontFamily="@font/poppins"
        android:gravity="center_vertical"
        android:inputType="none"/>

    <EditText
        android:id="@+id/contentEditText"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/content_hint"
        android:padding="12dp"
        android:textSize="20sp"
        android:layout_below="@+id/deadLineTextView"
        android:background="@drawable/box_border"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/poppins"
        android:gravity="top|start"
        />

</RelativeLayout>
